--- a/Exercici.1/index.html
+++ b/Exercici.1/index.html
@@ -7,8 +7,18 @@
     <title>AJAX.Nivell 1</title>
     <!--CSS styles-->
     <link rel="stylesheet" href="./styles/css/style.css">
+    <!--Google fonts-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Cabin:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="boton">
+            <a class="btn" href="#">Tell me a joke</a>
+        </div>
+        <div class="respuesta">
+            <div class="texto"></div>
+        </div>
+    </div>
 </body>
 </html>
