--- a/Exercici.1/index.html
+++ b/Exercici.1/index.html
@@ -17,18 +17,18 @@
 <body>
     <div class="contenedor">
         <div class="boton">
-            <button id="button" type="button" class="btn btn-warning btn-lg">Tell me a joke</button>
+            <button id="button" type="button" class="btn btn-dark btn-lg py-4 px-5">Tell me a joke</button>
         </div>
         <div class="respuesta">
-            <div class="texto"></div>
+            <div id="texto" class="texto"></div>
         </div>
     </div>
-    <!-- JQuery-->  
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
+    <!-- JQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <!-- JavaScript-->
     <script src="./scripts/index.js"></script>
-    <!-- jQuery and Bootstrap Bundle (includes Popper) CDN-->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <!-- Bootstrap Bundle (includes Popper) CDN-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
       
 </body>
