--- a/Exercici.2/index.html
+++ b/Exercici.2/index.html
@@ -7,17 +7,13 @@
     <title>AJAX.Nivell 1</title>
     <!--CSS styles-->
     <link rel="stylesheet" href="./styles/css/style.css">
-    <!--Google fonts-->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <!-- Bootstrap CDN -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
-<link href="https://fonts.googleapis.com/css2?family=Cabin:wght@500&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class="contenedor">
         <div class="boton">
-            <button id="button" type="button" class="btn btn-dark btn-lg py-4 px-5">Tell me a joke</button>
+            <div class="button" id="button">Tell me a joke</div>
         </div>
         <div class="respuesta">
             <div id="texto" class="texto"></div>
@@ -28,8 +24,6 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <!-- JavaScript-->
     <script src="./scripts/index.js"></script>
-    <!-- Bootstrap Bundle (includes Popper) CDN-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-      
+
 </body>
 </html>
