--- a/Exercici.2/index.html
+++ b/Exercici.2/index.html
@@ -11,13 +11,23 @@
 
 </head>
 <body>
+
+
     <div class="contenedor">
-        <div class="boton">
-            <div class="button" id="button">Tell me a joke</div>
-        </div>
-        <div class="respuesta">
-            <div id="texto" class="texto"></div>
-        </div>
+
+
+            <div class="button" id="button">
+                <div class="btn1">
+                    <div class="btn2"></div>
+                </div>
+            </div>
+
+
+            <div class="respuesta">
+                    <div id="texto" class="texto"></div>
+            </div>
+
+
     </div>
 
     <!-- JQuery -->
