--- a/Exercici.2/index.html
+++ b/Exercici.2/index.html
@@ -7,7 +7,9 @@
     <title>AJAX.Nivell 1</title>
     <!--CSS styles-->
     <link rel="stylesheet" href="./styles/css/style.css">
-
+    <!--GoogleFonts-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -16,7 +18,13 @@
     <div class="contenedor">
 
 
-            <div class="button" id="button">
+            <div class="button1" id="button1">
+                <div class="btn1">
+                    <div class="btn2"></div>
+                </div>
+            </div>
+
+            <div class="button2" id="button2">
                 <div class="btn1">
                     <div class="btn2"></div>
                 </div>
