--- a/Exercici.3/index.html
+++ b/Exercici.3/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AJAX.Nivell 1</title>
+    <!--Bootstrap-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <!--CSS styles-->
     <link rel="stylesheet" href="./styles/css/style.css">
     <!--GoogleFonts-->
@@ -14,8 +16,18 @@
 </head>
 <body>
 
+    <div class="contenedor">
 
-    <div class="contenedor" id="contenedor">
+        <div class="centrarAlert">
+
+            <div class="alert alert-dark position-absolute font-weight-bold mt-5 alert-dismissible py-3" role="alert">
+                Hit the dartboard and Chuck will tell you a joke
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+            </div>
+
+        </div>
 
             <div class="button1" id="button1">
                 <div class="btn1">
@@ -35,10 +47,14 @@
 
     </div>
 
+    
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <!-- JavaScript-->
     <script src="./scripts/index.js"></script>
+    <!--Bootstrap-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+
 
 </body>
 </html>
