--- a/Exercici.2/index.html
+++ b/Exercici.2/index.html
@@ -21,7 +21,7 @@
         <div class="centrarAlert">
 
             <div class="alert alert-dark position-absolute font-weight-bold mt-5 alert-dismissible py-3" role="alert">
-                Hit the dartboard and Chuck will tell you a joke
+                Hit the center of the dartboard and Chuck will tell you a joke
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                   </button>
